@@ -394,6 +394,8 @@ Trunk (unreleased changes)
 
     HDFS-682. Fix bugs in TestBlockUnderConstruction.  (szetszwo)
 
+    HDFS-668. TestFileAppend3#TC7 sometimes hangs. (hairong)
+
 Release 0.20.2 - Unreleased
 
   BUG FIXES
